--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,105 @@
 :root{
-    --blue: #0ea5e9;
+    --blue: #1899e4;
     --yellow: #fbbf24;
     --grey: #e2e8f0;
     --black: black;
+    --white: white;
 }
 
 *{
     list-style: none;
 }
 
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
 body{
     background-color: var(--grey);
 }
 
+.container {
+  display: grid;
+}
+
+.container div {
+  padding: 15px;
+  font-size: 18px;
+  font-family: Helvetica;
+  font-weight: 600;
+}
 
 .sidebar{
     background-color: var(--blue);
     color: white;
+    grid-column: 1 / 2;
+    grid-row: 1 / 4;
+}
+
+#dash-logo{
+    width: 28px;
+    height: auto;
+}
+
+#dash-title{
+    font-size: 22px;
+}
+
+.nav{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 80px repeat(5, 50px) 80px repeat(3, 50px);
 }
 
 header{
-    background-color: white;
+    background-color: var(--white);
+    display: grid;
+    color: black;
+}
+
+.searchbar{
+    display: grid;
+    grid-template-columns: 0.2fr 0.3fr 3fr 0.5fr 0.5fr 0.5fr 2fr 0.3fr;
+    grid-template-rows: 40px;
+    align-items: center;
+    gap: 10px;
+    justify-content: space-around;
+}
+
+.search-input{
+    border-radius: 20px;
+    width: 550px;
+    background-color: #cbced6;
+    border: none;
+    height: 25px;
+}
+
+.greeting{
+    background-color: var(--white);
+    display: grid;
+    grid-template-columns: 0.2fr 0.7fr 5fr 1fr 1fr 1fr 0.3fr;
+    grid-template-rows: 60px;
+    align-items: center;
+    text-align: left;
+    justify-content: space-around;
 }
 
 .card{
-    background-color: white;
+    background-color: #7E1DC3;
+    
+}
+
+.card p {
+    font-size: 18px;
+    font-family: sans-serif;
+    color: white;
+    text-align: left;
 }
 
 .announcement{
-    background-color: white;
+    background-color: rgb(115, 245, 121);
 }
 
 .title{
@@ -51,17 +122,26 @@ button{
 }
 
 #icon{
-    width: 25px;
+    width: 22px;
+    height: auto;
+    display: grid;
+}
+
+#logo{
+    width: 50px;
     height: auto;
 }
 
 footer {
-    display: flex;
-    justify-content: center;
+    background-color: #cbced6;
+    grid-column: 1 / 3;
+    font-size: 15px;
+    text-align: center;
+
 }
 
 .fa-github {
     color: black;  
     font-size: 24px;
-    transition: transform 0.3s ease-in-out;
+
 }
