--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ header{
 
 .searchbar{
     display: grid;
-    grid-template-columns: 0.2fr 0.3fr 3fr 0.5fr 0.5fr 0.5fr 2fr 0.3fr;
+    grid-template-columns:  0.3fr 10fr 0.5fr 0.5fr 0.5fr 1fr;
     grid-template-rows: 40px;
     align-items: center;
     gap: 10px;
@@ -77,7 +77,7 @@ header{
 .greeting{
     background-color: var(--white);
     display: grid;
-    grid-template-columns: 0.2fr 0.7fr 5fr 1fr 1fr 1fr 0.3fr;
+    grid-template-columns: 0.3fr 3fr 0.5fr 0.5fr 0.5fr;
     grid-template-rows: 60px;
     align-items: center;
     text-align: left;
